# ChainX

./: Cargo.toml
.github/workflows/: ci.yaml  pre_release.yml  push_docker_image.yml
cli/src/: chain_spec.rs  command.rs  lib.rs
rpc/src/: lib.rs
runtime/dev/src/: lib.rs
runtime/src/: lib.rs
scripts/ci/: test_deterministic_wasm.sh
service/src/: client.rs  lib.rs
xpallets/gateway/bitcoin/v2/: Cargo.toml
xpallets/gateway/bitcoin/v2/rpc/runtime-api/src/: lib.rs
xpallets/gateway/bitcoin/v2/rpc/src/: lib.rs
xpallets/gateway/bitcoin/v2/src/: lib.rs  rpc.rs
xpallets/gateway/offchain/: Cargo.toml  config.json
xpallets/gateway/offchain/src/: bitcoin.rs  chainx.rs  cmd.rs  error.rs  lib.rs  logger.rs  service.rs  tests.rs
xpallets/gateway/offchain/src/runtime/: mod.rs  primitives.rs
xpallets/gateway/offchain/src/runtime/frame/: mod.rs  xgateway_bitcoin.rs  xgateway_common.rs  xgateway_records.rs  xsystem.rs
xpallets/gateway/offchain/subtext/: Cargo.toml
xpallets/gateway/offchain/subtext/src/: error.rs  events.rs  lib.rs  metadata.rs
xpallets/gateway/offchain/subtext/src/client/: mod.rs  rpc.rs
xpallets/gateway/offchain/subtext/src/runtime/: extra.rs  impls.rs  mod.rs  signer.rs
xpallets/gateway/offchain/subtext/src/runtime/frame/: balances.rs  mod.rs  system.rs
xrml/xbridge/bitcoin/src/: lib.rs
