[package]
name = "chainx"
version = "2.0.0-alpha.0"
authors = ["The ChainX Authors"]
edition = "2018"
description = "Fully Decentralized Interchain Crypto Asset Management on Polkadot"

[patch.crates-io]
# patch for substrate runtime module
pallet-transaction-payment = { path = "./frame/transaction-payment" }

sp-timestamp = { path = "../substrate/primitives/timestamp" }
sp-externalities = { path = "../substrate/primitives/externalities" }
sp-io = { path = "../substrate/primitives/io" }
sp-core = { path = "../substrate/primitives/core" }
sp-runtime = { path = "../substrate/primitives/runtime" }
sp-runtime-interface = { path = "../substrate/primitives/runtime-interface" }
sp-application-crypto = { path = "../substrate/primitives/application-crypto" }
sp-arithmetic = { path = "../substrate/primitives/arithmetic" }
sp-consensus = { path = "../substrate/primitives/consensus/common" }
sp-consensus-babe = { path = "../substrate/primitives/consensus/babe" }
sp-consensus-slots = { path = "../substrate/primitives/consensus/slots" }
sp-storage = { path = "../substrate/primitives/storage" }
sp-staking = { path = "../substrate/primitives/staking" }
sp-session = { path = "../substrate/primitives/session" }
sp-version = { path = "../substrate/primitives/version" }
sp-inherents = { path = "../substrate/primitives/inherents" }
sp-blockchain = { path = "../substrate/primitives/blockchain" }
sp-state-machine = { path = "../substrate/primitives/state-machine" }
sp-api = { path = "../substrate/primitives/api" }
sp-database = { path = "../substrate/primitives/database" }
sp-trie = { path = "../substrate/primitives/trie" }
sp-utils = { path = "../substrate/primitives/utils" }
sp-transaction-pool = { path  = "../substrate/primitives/transaction-pool" }
sp-offchain = { path  = "../substrate/primitives/offchain" }
sp-block-builder = { path  = "../substrate/primitives/block-builder" }
sp-rpc = { path  = "../substrate/primitives/rpc" }
sp-chain-spec = { path  = "../substrate/primitives/chain-spec" }
sp-finality-grandpa = { path  = "../substrate/primitives/finality-grandpa" }

sc-executor = { path = "../substrate/client/executor" }
sc-telemetry = { path = "../substrate/client/telemetry" }
sc-tracing = { path = "../substrate/client/tracing" }
sc-network = { path = "../substrate/client/network" }
sc-service = { path = "../substrate/client/service" }
sc-basic-authorship = { path = "../substrate/client/basic-authorship" }
sc-keystore = { path = "../substrate/client/keystore" }
sc-finality-grandpa = { path = "../substrate/client/finality-grandpa" }
sc-consensus-babe = { path = "../substrate/client/consensus/babe" }
sc-consensus-epochs = { path = "../substrate/client/consensus/epochs" }
sc-transaction-pool = { path = "../substrate/client/transaction-pool" }
sc-client-api = { path = "../substrate/client/api" }
sc-rpc-api = { path = "../substrate/client/rpc-api" }
sc-rpc = { path = "../substrate/client/rpc" }
sc-chain-spec = { path = "../substrate/client/chain-spec" }
# sc-block-builder = { path = "../substrate/client/block-builder" }

frame-system = { path = "../substrate/frame/system" }
frame-support = { path = "../substrate/frame/support" }
frame-benchmarking = { path = "../substrate/frame/benchmarking" }

pallet-authorship = { path = "../substrate/frame/authorship" }
pallet-babe = { path = "../substrate/frame/babe" }
pallet-session = { path = "../substrate/frame/session" }
pallet-timestamp = { path = "../substrate/frame/timestamp" }
pallet-elections-phragmen = { path  = "../substrate/frame/elections-phragmen" }

[dependencies]
cli = { package = "chainx-cli", path = "cli" }

[target.'cfg(target_arch="x86_64")'.dependencies]
cli = { package = "chainx-cli", path = "cli", features = [ "wasmtime" ] }

[workspace]
members = [
    "cli",
    "executor",
    "primitives",
    "primitives/runtime",
    "primitives/mining/common",
    "primitives/mining/staking",
    "primitives/assets-registrar",
    "primitives/io",
    "rpc",
    "runtime",

    "xpallets/assets",
    "xpallets/assets/rpc",
    "xpallets/assets/rpc/runtime-api",
    "xpallets/assets-registrar",
    "xpallets/gateway/bitcoin",
    "xpallets/gateway/common",
    "xpallets/gateway/common/rpc",
    "xpallets/gateway/common/rpc/runtime-api",
    "xpallets/gateway/records",
    "xpallets/gateway/records/rpc",
    "xpallets/gateway/records/rpc/runtime-api",
    "xpallets/dex/spot",
    "xpallets/dex/spot/rpc",
    "xpallets/dex/spot/rpc/runtime-api",
    "xpallets/mining/asset",
    "xpallets/mining/asset/rpc",
    "xpallets/mining/asset/rpc/runtime-api",
    "xpallets/mining/staking",
    "xpallets/mining/staking/rpc",
    "xpallets/mining/staking/rpc/runtime-api",
    "xpallets/protocol",
    "xpallets/support",
    "xpallets/system",
]

[profile.release]
panic = "unwind"

[features]
runtime-benchmarks = ["cli/runtime-benchmarks"]
