[package]
name = "offchain"
version = "0.1.0"
authors = ["The ChainX Authors"]
edition = "2018"

[patch.crates-io]
# TODO: remove this when new substrate-subxt is published.
#substrate-subxt = { git = "https://github.com/paritytech/substrate-subxt", rev = "7655caac0f1cdf7ade026cafe255defaf1966885" }

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false}
serde = { version = "1.0.101", default-features = false, optional = true }
sp-core = { version = "2.0.0", default-features = false}
#sp-keystore = { version = "0.8.0", default-features = false, optional = true}
sp-io = { version = "2.0.0", default-features = false}
sp-runtime = { version = "2.0.0", default-features = false}
sp-std = { version = "2.0.0", default-features = false}
lite-json = { version = "0.1", default-features = false }
#substrate-subxt = { version = "0.13.0", default-features = false }
async-jsonrpc-client = { version = "0.1", default-features = false, features = ["http"] }
anyhow = "1.0"

async-std = "1.6"
async-trait = "0.1"
bs58 = "0.3"
base64 = "0.12"
futures = "0.3"
hex = "0.4"
lazy_static = "1.4"
log = { version = "0.4", features = ["std", "serde"] }
log4rs = "0.11"
#serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "time"] }
url = { version = "2.1", features = ["serde"] }
pallet-indices = "2.0.0"
subxt = { package = "substrate-subxt", version = "0.13.0" }

# light-bitcoin
light-bitcoin = { git = "https://github.com/chainx-org/light-bitcoin", branch = "master" }
[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "serde",
    "lite-json/std",
    "sp-core/std",
    "sp-io/std",
 #   "sp-keystore",
    "sp-runtime/std",
    "sp-std/std",
]
