[package]
name = "subtext"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "The ChainX Authors"]
edition = "2018"
license = "GPL-3.0"
description = """
Fork from `substrate-subxt`,
submit the extrinsics (transactions) to a substrate node via RPC
"""

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3", features = ["derive", "full"] }
futures = "0.3"
hex = "0.4"
jsonrpsee = { version = "0.1", default-features = false, features = ["ws"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.1"

# Substrate (v2.0.0)
sp-core = "2.0.0"
sp-runtime = "2.0.0"
sp-rpc = "2.0.0"
#sp-transaction-pool = "2.0.0"
sp-version = "2.0.0"
frame-metadata = "12.0.0"
frame-support = "2.0.0"
pallet-indices = "2.0.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
